SXDEDPCXZIC-44_DATAVIC-493/Fixed data and resource section breaking issues on small devices

--- a/ckanext/datavic_iar_theme/grunt/sass/_ckan_reset.scss
+++ b/ckanext/datavic_iar_theme/grunt/sass/_ckan_reset.scss
@@ -135,6 +135,7 @@ body {
 [role="main"] .container {
   padding-left: 0;
   padding-right: 0;
+  width: 940px;
 }
 
 .unstyled {
