--- a/ckanext/datavic_iar_theme/webassets/datavic_iar_theme.css
+++ b/ckanext/datavic_iar_theme/webassets/datavic_iar_theme.css
@@ -104,7 +104,8 @@ body {
 
 [role="main"] .container {
   padding-left: 0;
-  padding-right: 0; }
+  padding-right: 0;
+  width: 940px; }
 
 .unstyled {
   margin: 0; }
@@ -473,10 +474,6 @@ html {
 
 body {
   color: #011A3C; }
-  @media (max-width: 767px) {
-    body {
-      padding-left: 0;
-      padding-right: 0; } }
 
 .module-content h1 {
   font-family: "Vic-Bold", arial, sans-serif;
@@ -1710,7 +1707,8 @@ nav {
   padding: 10px; }
   .resource-item .resource-summary {
     flex-grow: 2;
-    margin-right: 15px; }
+    margin-right: 15px;
+    word-break: break-word; }
   .resource-item .resource-icon {
     max-width: 45px; }
     .resource-item .resource-icon .format-label {
@@ -1731,6 +1729,12 @@ nav {
   position: relative;
   top: auto;
   right: auto; }
+
+@media (max-width: 767px) {
+  .resource-list .resource-item {
+    display: inline; }
+    .resource-list .resource-item .btn-group {
+      display: block; } }
 
 .dropdown-menu {
   border-color: #F6BE00; }
